hgweb: kill #manifest#

--- a/templates/changelogentry.tmpl
+++ b/templates/changelogentry.tmpl
@@ -19,7 +19,7 @@
   <td class="date">#date|date#</td>
  </tr>
  <tr>
-  <th class="files"><a href="?mf=#manifest|short#;path=/">files</a>:</th>
+  <th class="files"><a href="?mf=#node|short#;path=/">files</a>:</th>
   <td class="files">#files#</td>
  </tr>
 </table>
