--- a/templates/changelog.tmpl
+++ b/templates/changelog.tmpl
@@ -8,7 +8,7 @@
 <div class="buttons">
 <a href="?sl=#rev#">shortlog</a>
 <a href="?cmd=tags">tags</a>
-<a href="?mf=#manifest|short#;path=/">manifest</a>
+<a href="?mf=#node|short#;path=/">manifest</a>
 #archives%archiveentry#
 <a type="application/rss+xml" href="?style=rss">rss</a>
 </div>
