--- a/templates/changeset.tmpl
+++ b/templates/changeset.tmpl
@@ -7,7 +7,7 @@
 <a href="?cl=#rev#">changelog</a>
 <a href="?sl=#rev#">shortlog</a>
 <a href="?cmd=tags">tags</a>
-<a href="?mf=#manifest|short#;path=/">manifest</a>
+<a href="?mf=#node|short#;path=/">manifest</a>
 <a href="?cs=#node|short#;style=raw">raw</a>
 #archives%archiveentry#
 </div>
