--- a/templates/filerevision.tmpl
+++ b/templates/filerevision.tmpl
@@ -8,7 +8,7 @@
 <a href="?sl=#rev#">shortlog</a>
 <a href="?tags=">tags</a>
 <a href="?cs=#node|short#">changeset</a>
-<a href="?mf=#manifest|short#;path=#path|urlescape#">manifest</a>
+<a href="?mf=#node|short#;path=#path|urlescape#">manifest</a>
 <a href="?fl=#filenode|short#;file=#file|urlescape#">revisions</a>
 <a href="?fa=#filenode|short#;file=#file|urlescape#">annotate</a>
 <a href="?f=#filenode|short#;file=#file|urlescape#;style=raw">raw</a>
