--- a/templates/manifest.tmpl
+++ b/templates/manifest.tmpl
@@ -1,5 +1,5 @@
 #header#
-<title>#repo|escape#: manifest #manifest|short#</title>
+<title>#repo|escape#: manifest for changeset #node|short#</title>
 </head>
 <body>
 
@@ -16,7 +16,7 @@
 <table cellpadding="0" cellspacing="0">
 <tr class="parity1">
   <td><tt>drwxr-xr-x</tt>&nbsp;
-  <td><a href="?mf=#manifest|short#;path=#up|urlescape#">[up]</a>
+  <td><a href="?mf=#node|short#;path=#up|urlescape#">[up]</a>
 #dentries%manifestdirentry#
 #fentries%manifestfileentry#
 </table>
