--- a/templates/search.tmpl
+++ b/templates/search.tmpl
@@ -7,7 +7,7 @@
 <a href="?cl=tip">changelog</a>
 <a href="?sl=tip">shortlog</a>
 <a href="?tags=">tags</a>
-<a href="?mf=#manifest|short#;path=/">manifest</a>
+<a href="?mf=#node|short#;path=/">manifest</a>
 </div>
 
 <h2>searching for #query|escape#</h2>
