Move gitweb theme into subdirectory

--- a/templates/gitweb/changelog.tmpl
+++ b/templates/gitweb/changelog.tmpl
@@ -1,3 +1,7 @@
+
+copyrev: 33b3bf7f571f84bb20d578fbdb5d24b59e55ed65
+copy: templates/changelog-gitweb.tmpl
+
 #header#
 <title>#repo|escape#: Changelog</title>
 <link rel="alternate" type="application/rss+xml"
