--- a/templates/gitweb/changelogentry.tmpl
+++ b/templates/gitweb/changelogentry.tmpl
@@ -1,3 +1,7 @@
+
+copyrev: 9cb2cd7bf8e1360598bf26221fd2790984eaec9a
+copy: templates/changelogentry-gitweb.tmpl
+
 <div>
 <a class="title" href="?cmd=changeset;node=#node#;style=gitweb"><span class="age">#date|age# ago</span>#desc|strip|firstline|escape#</a>
 </div>
