--- a/templates/gitweb/changeset.tmpl
+++ b/templates/gitweb/changeset.tmpl
@@ -1,3 +1,7 @@
+
+copyrev: e64dc6094ea4a18f1f6ec38a54511de4d527798e
+copy: templates/changeset-gitweb.tmpl
+
 #header#
 <title>#repo|escape#: Changeset</title>
 <link rel="alternate" type="application/rss+xml"
