--- a/templates/gitweb/error.tmpl
+++ b/templates/gitweb/error.tmpl
@@ -1,3 +1,7 @@
+
+copyrev: a36269d4c94c233d5297512b211b871d68b69c8a
+copy: templates/error-gitweb.tmpl
+
 #header#
 <title>#repo|escape#: Error</title>
 <link rel="alternate" type="application/rss+xml"
