--- a/templates/gitweb/fileannotate.tmpl
+++ b/templates/gitweb/fileannotate.tmpl
@@ -1,3 +1,7 @@
+
+copyrev: 18ebb7ef383a80ea49aadd5d15badc07ed1de0b2
+copy: templates/fileannotate-gitweb.tmpl
+
 #header#
 <title>#repo|escape#: Annotate</title>
 <link rel="alternate" type="application/rss+xml"
