--- a/templates/gitweb/filerevision.tmpl
+++ b/templates/gitweb/filerevision.tmpl
@@ -1,3 +1,7 @@
+
+copyrev: 7be20ec84d0e6d5caed7fb0cace7c37e49756af6
+copy: templates/filerevision-gitweb.tmpl
+
 #header#
 <title>#repo|escape#: File revision</title>
 <link rel="alternate" type="application/rss+xml"
