--- a/templates/gitweb/header.tmpl
+++ b/templates/gitweb/header.tmpl
@@ -1,3 +1,7 @@
+
+copyrev: 84cfab4f733b46e85c079fb3d8aa8b9dd3a3250a
+copy: templates/header-gitweb.tmpl
+
 Content-type: text/html
 
 <?xml version="1.0" encoding="utf-8"?>
