--- a/templates/gitweb/index.tmpl
+++ b/templates/gitweb/index.tmpl
@@ -1,3 +1,7 @@
+
+copyrev: 961dc88c95f140f1f77806b702db0d27307e6e90
+copy: templates/index-gitweb.tmpl
+
 #header#
 <title>Mercurial repositories index</title>
 </head>
