--- a/templates/gitweb/manifest.tmpl
+++ b/templates/gitweb/manifest.tmpl
@@ -1,3 +1,7 @@
+
+copyrev: 6b266a5bc44747ddd07621b86f55e7cc3d00f77b
+copy: templates/manifest-gitweb.tmpl
+
 #header#
 <title>#repo|escape#: Manifest</title>
 <link rel="alternate" type="application/rss+xml"
