--- a/templates/gitweb/summary.tmpl
+++ b/templates/gitweb/summary.tmpl
@@ -1,3 +1,7 @@
+
+copyrev: 5ae4f640510d6261586830233c0ee87f00e8874c
+copy: templates/summary-gitweb.tmpl
+
 #header#
 <title>#repo|escape#: Summary</title>
 <link rel="alternate" type="application/rss+xml"
