--- a/templates/gitweb/filelog.tmpl
+++ b/templates/gitweb/filelog.tmpl
@@ -1,3 +1,7 @@
+
+copyrev: 51237700d54d40af2093e38d04d850a9ad7005f6
+copy: templates/filelog-gitweb.tmpl
+
 #header#
 <title>#repo|escape#: File revisions</title>
 <link rel="alternate" type="application/rss+xml"
