--- a/templates/gitweb/search.tmpl
+++ b/templates/gitweb/search.tmpl
@@ -1,3 +1,7 @@
+
+copyrev: 1c04cd6fa38d044883727c72ca18b115b6f38382
+copy: templates/search-gitweb.tmpl
+
 #header#
 <div class="page_nav">
 <a href="?cmd=summary;style=gitweb">summary</a> | <a href="?cmd=shortlog;style=gitweb">shortlog</a> | <a href="?cmd=changelog;style=gitweb">changelog</a> | <a href="?cmd=tags;style=gitweb">tags</a> | <a href="?mf=#node|short#;path=/;style=gitweb">manifest</a><br/>
