--- a/templates/gitweb/shortlog.tmpl
+++ b/templates/gitweb/shortlog.tmpl
@@ -1,3 +1,7 @@
+
+copyrev: 81fb7940c18cdfea15c27f404faed99465cabb5f
+copy: templates/shortlog-gitweb.tmpl
+
 #header#
 <title>#repo|escape#: Shortlog</title>
 <link rel="alternate" type="application/rss+xml"
