--- a/templates/gitweb/tags.tmpl
+++ b/templates/gitweb/tags.tmpl
@@ -1,3 +1,7 @@
+
+copyrev: 0d399d344f977023b592bbbfaf1230ab90616a2a
+copy: templates/tags-gitweb.tmpl
+
 #header#
 <title>#repo|escape#: Tags</title>
 <link rel="alternate" type="application/rss+xml"
