Move RSS theme into subdirectory

--- a/templates/rss/tagentry.tmpl
+++ b/templates/rss/tagentry.tmpl
@@ -1,3 +1,7 @@
+
+copyrev: 0c8e390de15150f45f7c3fb35be6f470b519a23f
+copy: templates/tagentry-rss.tmpl
+
 <item>
     <title>#tag|escape#</title>
     <link>#url#?cs=#node|short#</link>
