--- a/templates/rss/changelog.tmpl
+++ b/templates/rss/changelog.tmpl
@@ -1,3 +1,7 @@
+
+copyrev: 9327b9c208dba05457f87280bc5d4b9c13e6edd9
+copy: templates/changelog-rss.tmpl
+
 #header#
     <title>#repo|escape# Changelog</title>
     <description>#repo|escape# Changelog</description>
