--- a/templates/rss/changelogentry.tmpl
+++ b/templates/rss/changelogentry.tmpl
@@ -1,3 +1,7 @@
+
+copyrev: c6cd36fdf3897dfc23728c8c95027ab4c6cf324b
+copy: templates/changelogentry-rss.tmpl
+
 <item>
     <title>#desc|strip|firstline|strip|escape#</title>
     <link>#url#?cs=#node|short#</link>
