--- a/templates/rss/filelogentry.tmpl
+++ b/templates/rss/filelogentry.tmpl
@@ -1,3 +1,7 @@
+
+copyrev: 2eba384832cf26bfc5505ae4dde554dda2970072
+copy: templates/filelogentry-rss.tmpl
+
 <item>
     <title>#desc|strip|firstline|strip|escape#</title>
     <link>#url#?f=#node|short#;file=#file|urlescape#</link>
