--- a/templates/rss/tags.tmpl
+++ b/templates/rss/tags.tmpl
@@ -1,3 +1,7 @@
+
+copyrev: fafebbbffff64a5b55dda2f49bb784a52dd7f8d0
+copy: templates/tags-rss.tmpl
+
 #header#
     <title>#repo|escape#: tags </title>
     <description>#repo|escape# tag history</description>
