--- a/templates/raw/changeset.tmpl
+++ b/templates/raw/changeset.tmpl
@@ -1,3 +1,7 @@
+
+copyrev: e453d9d5b14f9d01c9507ea5b8c23e7905497485
+copy: templates/changeset-raw.tmpl
+
 #header#
 # HG changeset patch
 # User #author#
