--- a/templates/gitweb/footer.tmpl
+++ b/templates/gitweb/footer.tmpl
@@ -1,10 +1,6 @@
-
-copyrev: fe1a7c5f847dada6b7a397c1ad509762e7da4f1a
-copy: templates/footer-gitweb.tmpl
-
 <div class="page_footer">
 <div class="page_footer_text">#repo|escape#</div>
-<a class="rss_logo" href="?cmd=changelog;style=rss">RSS</a>
+<a class="rss_logo" href="#url#rss-log">RSS</a>
 </div>
 </body>
 </html>
