Fix RSS URLs (closes issue396)

--- a/templates/rss/header.tmpl
+++ b/templates/rss/header.tmpl
@@ -1,10 +1,6 @@
-
-copyrev: 21b9395fd23d5661b431a48ea3254073172b15bb
-copy: templates/header-rss.tmpl
-
 Content-type: text/xml
 
 <rss version="2.0">
   <channel>
-    <link>#url#</link>
+    <link>{urlbase}{url}</link>
     <language>en-us</language>
