--- a/templates/raw/header.tmpl
+++ b/templates/raw/header.tmpl
@@ -1,5 +1,2 @@
-
-copyrev: 1ee95652592225e388bcad21339d82c4804d7431
-copy: templates/header-raw.tmpl
-
-Content-type: text/plain
+Content-type: text/plain; charset={encoding}
+
